--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 exclude: ['README.markdown']
 permalink: ':title'
-highlighter: 'pygments'
+highlighter: 'rouge'
 safe: false
 title: 'Alexa Workshop @ re:MARS'
